# RDMS

RDMSbusy/: Alg1.cpp  Alg2.cpp  CMakeLists.txt  head.h  main.cpp  makefile  od_generation.cpp  structure.cpp
RDMSclear/: Alg1.cpp  head.h  main.cpp  makefile  od_generation.cpp  structure.cpp
